# Job-Hunter

./: .env.example  .gitignore  CLAUDE.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_03_18_2117-41bf48f19a23_create_users_and_user_profiles_tables.py  2026_03_18_2132-b499a83ebbdb_add_resumes_table.py  2026_03_18_2242-ae6845b1d9b9_add_jobs_and_saved_jobs_tables.py  2026_03_19_0004-a046e9389276_add_job_matches_table.py  2026_03_19_1018-e7ecbb837f49_add_ats_checks_table_and_ai_analysis_.py  2026_03_19_1815-d71e267bdba5_add_tailored_resume_table.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: __init__.py  ats_check.py  job.py  job_match.py  resume.py  tailored_resume.py  user.py
backend/app/routers/: ats.py  auth.py  dashboard.py  health.py  jobs.py  matching.py  resumes.py  tailored_resumes.py  users.py
backend/app/schemas/: ats.py  auth.py  dashboard.py  job.py  matching.py  onboarding.py  resume.py  tailored_resume.py  user.py
backend/app/services/: ats_checker.py  ats_rules.py  auth.py  dashboard.py  gemini.py  job.py  keyword_matcher.py  linkedin.py  matching.py  onboarding.py  resume.py  (+5 more)
backend/tests/: conftest.py  test_ats.py  test_ats_rules.py  test_auth.py  test_dashboard.py  test_health.py  test_jobs.py  test_linkedin_apify.py  test_matching.py  test_profile_completeness.py  test_resume_generator.py  test_resume_tailor.py  test_resume_templates.py  test_resumes.py  test_security.py  test_storage.py  test_users.py
(+116 files in other folders)
